@@ -1,3 +1,7 @@
+Fri Apr 10 19:34:24 2015  Tanaka Akira  <akr@fsij.org>
+
+	* test/ruby/test_file_exhaustive.rb: Test socket.
+
 Fri Apr 10 19:38:46 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* test/objspace/test_objspace.rb: remove debug prints.
